
0.3.4
=====

* FEATURE: Display comments and contributions links on history page.
* FEATURE: Split up recent changes page by date.
* FEATURE: Use java.util.logging for logging, remove log4j.
* FEATURE: Display "n" on changes pages for new topics.
* FEATURE: Add the capability to move a page over an existing redirect.
* FEATURE: Sort property values alphabetically.
* FEATURE: Do not display redirect syntax as an ordered list.
* FEATURE: Updated Hungarian translations from bDaneE.
* FEATURE: Updated Chinese translations from ewen0930.
* FEATURE: Updated German translations from Axel Kramer (axelclk).

0.3.3
=====

* BUG: Internet Explorer displays &apos; instead of apostrophe (').
* BUG: Resin taglib handling throws an error on wiki.jsp.
* BUG: Second attempted fix for reported URL decoding issue.
* FEATURE: Updated Hungarian translations from bDaneE.

0.3.2
=====

* BUG: Upgrades in file persistency mode fail due to delete date change.
* BUG: Do not include parentheses in raw links when parsing.

0.3.1
=====

* FEATURE: Add support for Mediawiki redirects (#REDIRECT [[Topic]]).
* FEATURE: Add Special:Move.
* FEATURE: Add jamwiki:linkParam tag, remove jamwiki:encode and
  jamwiki:decode tags.
* FEATURE: For non-image files, [[Image:File]] should display as a download
  link.
* BUG: Apostrophes were not being escaped by the parser.
* BUG: <pre> tags might not be closed by the parser.
* BUG: Use of the edit resolve functionality with a section edit could cause
  the resulting edit to splice together too much text.
* BUG: Upgrade could fail if no user logged in.  Reported by colinbes.
* BUG: Login page displayed the wrong login message.
* BUG: Do not allow user names that vary only by case ("user" vs. "uSer").
* BUG: Fix issue with browsers that encode URL as UTF-8 instead of ISO-8859-1.
* BUG: Remove extra "/" that could sometimes appear in image URLs.
* BUG: Fix topic undeletion when in file persistency mode.